# ai-barber-assistant

./: .gitignore  README.md  pyproject.toml
face_shape_resolver_service/: main.py  mcp_server.py  media_pipe_face_shape_descriptor.py  pyproject.toml  web_server.py
hair0/: README.md  main.py  pyproject.toml  test_memory.py
hair0/frontend/: index.html  package-lock.json  package.json  vite.config.ts
hair0/frontend/src/: App.tsx
hair0/frontend/src/components/: ErrorBoundary.tsx
hair0/frontend/src/components/layout/: Header.tsx  Layout.tsx  Navigation.tsx
hair0/frontend/src/components/ui/: markdown-renderer.tsx  spinner.tsx  webcam-capture.tsx
hair0/frontend/src/pages/: ChatPage.tsx  TempAppointmentsChatPage.tsx
hair0/frontend/src/services/: api.ts
hair0/src/config/: .gitignore  config.py
hair0/src/core/: agent_utils.py  appointment_agent.py  appointment_tools.py  consultation_agent.py  consultation_tools.py
hair0/src/services/: memory_manager.py  square_appointments_dao.py  square_bookings_dao.py
hair0/src/web/: server.py
repl_state/: repl_state.pkl
