[project]
name = "agents"
version = "0.1.0"
description = "Variety of agentic projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1.8",
    "strands-agents-builder>=0.1.3",
    "strands-agents-tools>=0.1.5",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "opcua>=0.98.13",
    "asyncua>=1.0.0",
    "rich>=14.0.0",
    "ruff>=0.12.1",
]

[tool.uv.workspace]
members = ["hair0"]

[tool.pyright]
venvPath = "."
venv = ".venv"
